crates/ebpf-disasm/tests/snapshots/golden__golden_arith.snap
---
source: crates/ebpf-disasm/tests/golden.rs
assertion_line: 27
expression: "disasm_fixture(\"arith.bin\")"
---
0   mov r1, 10
1   mov r2, 20
2   mov r3, r1
3   add r3, r2
4   mov r0, r3
5   exit
