crates/ebpf-disasm/tests/snapshots/golden__golden_branch.snap
---
source: crates/ebpf-disasm/tests/golden.rs
expression: "disasm_fixture(\"branch.bin\")"
---
0   mov r1, 10
1   mov r0, 1
2   jeq r1, 10, +1
3   mov r0, 2
4   exit
