crates/ebpf-disasm/tests/snapshots/golden__golden_branch_untaken.snap
---
source: crates/ebpf-disasm/tests/golden.rs
assertion_line: 37
expression: "disasm_fixture(\"branch_untaken.bin\")"
---
0   mov r1, 9
1   mov r0, 1
2   jeq r1, 10, +1
3   mov r0, 2
4   exit
