crates/ebpf-disasm/tests/snapshots/golden__golden_diamond.snap
---
source: crates/ebpf-disasm/tests/golden.rs
assertion_line: 42
expression: "disasm_fixture(\"diamond.bin\")"
---
0   mov r1, 5
1   jeq r1, 10, +2
2   mov r0, 1
3   ja +1
4   mov r0, 2
5   exit
