crates/ebpf-disasm/tests/snapshots/golden__golden_ldimm.snap
---
source: crates/ebpf-disasm/tests/golden.rs
expression: "disasm_fixture(\"ldimm.bin\")"
---
0   r2 = 0x5566778811223344
2   exit
