crates/ebpf-disasm/tests/snapshots/golden__golden_loop.snap
---
source: crates/ebpf-disasm/tests/golden.rs
assertion_line: 53
expression: "disasm_fixture(\"loop.bin\")"
---
0   mov r0, 0
1   mov r1, 0
2   add r0, 1
3   add r1, 1
4   jlt r1, 10, +-3
5   exit
