crates/ebpf-disasm/tests/snapshots/golden__golden_mov_exit.snap
---
source: crates/ebpf-disasm/tests/golden.rs
expression: "disasm_fixture(\"mov_exit.bin\")"
---
0   mov r0, 1
1   exit
