crates/ebpf-disasm/tests/snapshots/golden__golden_xdp.snap
---
source: crates/ebpf-disasm/tests/golden.rs
expression: "disasm_fixture(\"xdp_ethertype_pass.bin\")"
---
0   r2 = *(w *)(r1 + 0)
1   r3 = *(w *)(r1 + 4)
2   mov r4, r2
3   add r4, 14
4   jgt r4, r3, +2
5   r5 = *(h *)(r2 + 12)
6   jeq r5, 8, +2
7   mov r0, 1
8   exit
9   mov r0, 2
10  exit
